# ink-calleetrapped-issue

./: README.md
caller/: Cargo.toml  lib.rs
flipper/: Cargo.toml  lib.rs
