[package]
name = "flipper"
version = "3.0.0-rc6"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
resolver = "2"

[dependencies.ink_primitives]
version = "3.0.0-rc6"
git = "https://github.com/paritytech/ink"
default-features = false

[dependencies.ink_metadata]
version = "3.0.0-rc6"
git = "https://github.com/paritytech/ink"
default-features = false
features = ["derive"]
optional = true

[dependencies.ink_env]
version = "3.0.0-rc6"
git = "https://github.com/paritytech/ink"
default-features = false

[dependencies.ink_storage]
version = "3.0.0-rc6"
git = "https://github.com/paritytech/ink"
default-features = false

[dependencies.ink_lang]
version = "3.0.0-rc6"
git = "https://github.com/paritytech/ink"
default-features = false


[dependencies]
scale = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[lib]
name = "flipper"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
]
ink-as-dependency = []
